Add minimal functionality

--- a/WatchPlusApp/Views/index.html
+++ b/WatchPlusApp/Views/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div class="films-list">
-        <i>{Name}</i>
-        <i>{Rate}</i>
         
+        <a href="http://localhost:8080/home">IMDB</a>
     </div>
 </body>
 </html>
+
