--- a/WatchPlusApp/Views/films.html
+++ b/WatchPlusApp/Views/films.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="color: red;font-size: 50px;">PAGE NOT FOUND 404!</div>
+    {{body}}
+    
 </body>
 </html>
