--- a/WatchPlusApp/Views/index.html
+++ b/WatchPlusApp/Views/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<style>
+    .films-list {
+        width: fit-content;
+        margin: 10px auto;
+        font-size: 40px;
+    }
+</style>
 <body>
     <div class="films-list">
         
-        <a href="http://localhost:8080/home">IMDB</a>
+        <a href="http://localhost:8080/films">WELCOME TO WHATCH+</a>
     </div>
 </body>
 </html>
