--- a/WatchPlus/Views/Shared/_Layout.cshtml
+++ b/WatchPlus/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/Film">Add Film</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/TvShow">Add TvShow</a>
+                        </li>
                     </ul>
                 </div>
             </div>
