--- a/WatchPlus/Views/TvShow/Index.cshtml
+++ b/WatchPlus/Views/TvShow/Index.cshtml
@@ -1,4 +1,4 @@
-<form id="filmForm" action="/Film" method="post" enctype="multipart/form-data">
+<form id="TvShowForm" action="/TvShow" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label for="exampleFormControlFile1">Film Image</label>
         <input name="Image" type="file" class="form-control-file" id="exampleFormControlFile1">
@@ -28,14 +28,20 @@
             <input name="Rate" type="text" class="form-control" id="inputCity">
         </div>
     </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputCity">VideoTrailer</label>
+            <input name="VideoTrailer" type="text" class="form-control" id="inputCity">
+        </div>
+    </div>
 
-    
+
     <button type="button" id="submitButton" class="btn btn-primary">Sign in</button>
 </form>
 
 <script>
     document.getElementById("submitButton").addEventListener("click", function () {
-        alert("Film Added");
-        document.getElementById("filmForm").submit(); 
+        alert("TvShow Added");
+        document.getElementById("TvShowForm").submit();
     });
 </script>
