--- a/WatchPlus/Views/TvShow/InfoAboutTvShow.cshtml
+++ b/WatchPlus/Views/TvShow/InfoAboutTvShow.cshtml
@@ -8,7 +8,7 @@
 <h1>@base.Model.Name</h1>
 <img src="@base.Model.Image">
 <div>
-    <h3>Description: </h3>@base.Model.Description
+    <h3>Description: </h3>@base.Model.Presentation
 </div>
 <div>
     <h3>Star: </h3><a href="https://ru.wikipedia.org/wiki/@base.Model.Star">@base.Model.Star</a>
@@ -16,4 +16,4 @@
 <div>
     <h3>Category: </h3>@base.Model.Category
 </div>
-<iframe id="videoPlayer" src="@Model.VideoTrailer" width="50%" height="315" frameborder="0" allowfullscreen></iframe>
+<iframe id="videoPlayer" src="@Model.TrailerVideo" width="50%" height="315" frameborder="0" allowfullscreen></iframe>
