--- a/WatchPlus/Views/Shared/_Layout.cshtml
+++ b/WatchPlus/Views/Shared/_Layout.cshtml
@@ -26,10 +26,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-
-
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/Film">Add Film</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Film" asp-action="GetAllFilms">Films</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TvShow" asp-action="GetAllTvShows">Tv Shows</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Film" asp-action="Index">Add Film</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/TvShow">Add TvShow</a>
